Company Org/src/objects/Weekly_Report__c.object
<CustomObject>
    <fields>
        <fullName>Concretian__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Concretian</label>
        <referenceTo>Concretian__c</referenceTo>
        <relationshipLabel>Weekly Reports</relationshipLabel>
        <relationshipName>Weekly_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>From_date__c</fullName>
        <label>From date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notify_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weekly_Report_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Weekly Report External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Weekly Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Concretian__c</columns>
        <columns>From_date__c</columns>
        <columns>To_Date__c</columns>
        <columns>Notify_User__c</columns>
        <columns>Report_Generated__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Weekly Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>